# Pixelis

./: .coverage.ClayKas-MacBook-Pro.local.28459.XjtpURMx  .coverage.ClayKas-MacBook-Pro.local.53540.XIhvTyex  .coveragerc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPUTE_BUDGET.md  Openrouter_API.md  README.md  SETUP.md  absolute_final_segment_coverage.py  complete_segment_coverage.py  comprehensive_coverage_test.py  coverage.xml  debug_coverage.py  debug_track_test.py  discover_models.py  environment.yml  environment_setup.yml  final_coverage_push.py  final_segment_100_coverage.py  final_track_100_coverage.py  fix-ci-cd.md  fix.md  fix2.md  fix3.md  for_coverage_instruction.md  full_test_report.txt  generate_unsplash_annotations.py  improvement.md  install_dependencies.sh  merge_dependencies.py  pyproject.toml  pytest.md  pytest2.md  pytest3.md  pytest4.md  pytest5.md  pytest6.md  pytest7.md  (+31 more)
.github/workflows/: ci-improved.yml  ci-long-running.yml  ci.yml
benchmark_results/: simulated_benchmark_20250813_125315.txt
configs/: config.yaml  cota_generation.yaml  data_fusion_manifest.yaml  data_generation_manifest.yaml  model_arch.yaml  preprocess_config.yaml  rft_config.yaml  training_params.yaml
configs/experiments/: example_rft_experiment.yaml  example_sft_experiment.yaml
core/: config_schema.py  data_structures.py
core/data_generation/: task_generators.py  trajectory_augmenter.py
core/dataloaders/: README.md  __init__.py  activitynet_captions_loader.py  assembly101_loader.py  base_loader.py  coco_segment_loader.py  didemo_loader.py  docvqa_loader.py  epic_kitchens_loader.py  flickr30k_loader.py  frame_aware_loader.py  hiertext_loader.py  icdar_art_loader.py  infographics_vqa_loader.py  lvis_segment_loader.py  mind2web_loader.py  mot_loader.py  mot_sliding_window_loader.py  msrvtt_loader.py  part_imagenet_loader.py  robust_activitynet_loader.py  robust_base_loader.py  sa1b_loader.py  sa1b_segment_loader.py  sa1b_streaming_loader.py  starqa_loader.py  textcaps_loader.py  timestamp_utils.py  tvqa_loader.py  unsplash_lite_loader.py  uvo_loader.py  youtube_vos_loader.py
core/engine/: inference_engine.py  update_worker.py
core/models/: __init__.py  peft_model.py
core/modules/: alerter.py  audit.py  dynamics_model.py  experience_buffer.py  experience_buffer_enhanced.py  frame_extractor.py  operation_registry.py  persistence_adapter.py  privacy.py  reward_shaping.py  reward_shaping_enhanced.py  voting.py
core/reproducibility/: __init__.py  artifact_manager.py  config_capture.py  decorators.py  experiment_context.py  lineage_tracker.py
core/utils/: __init__.py  context.py  logging_utils.py  reproducibility.py
docs/: ANNOTATOR_GUIDELINES.md  ARCHITECTURE.md  BENCHMARKS.md  CODE_REVIEW_PHASE2_R1.md  DATA_PROVENANCE.md  DEVELOPMENT_WORKFLOW.md  EXPERIMENTAL_PROTOCOL.md  FIX3_COMPLETE_IMPLEMENTATION_SUMMARY.md  FIX3_IMPLEMENTATION_SUMMARY.md  HUMAN_EVALUATION_PROTOCOL.md  IMPROVEMENTS_SUMMARY.md  PHASE0_ROUND1_SUMMARY.md  PHASE0_ROUND2_SUMMARY.md  PHASE0_ROUND3_SUMMARY.md  PHASE0_ROUND4_SUMMARY.md  PHASE0_ROUND5_SUMMARY.md  PHASE0_ROUND6_SUMMARY.md  PHASE1_ROUND1_SUMMARY.md  PHASE1_ROUND2_SUMMARY.md  PHASE1_ROUND3_SUMMARY.md  PHASE1_ROUND4_SUMMARY.md  PHASE2_ROUND1_SUMMARY.md  PHASE2_ROUND2_SUMMARY.md  PHASE2_ROUND3_SUMMARY.md  PHASE2_ROUND4_SUMMARY.md  PHASE2_ROUND5_SUMMARY.md  PHASE2_ROUND6_SUMMARY.md  PHASE3_ROUND0_SUMMARY.md  PHASE3_ROUND1_SUMMARY.md  PHASE3_ROUND2_SUMMARY.md  PHASE3_ROUND3_SUMMARY.md  PHASE3_ROUND4_SUMMARY.md  PHASE3_ROUND5_SUMMARY.md  PREPROCESSING_GUIDE.md  Phase1Round2_COMPLETE.md  REPRODUCIBILITY.md  SECURITY_AND_PRIVACY.md  SFT_CURRICULUM_GUIDE.md  TEST_CATALOG.md  TEST_DEBUGGING_GUIDE.md  (+1 more)
docs/api/: core.md  core_engine.md  core_models.md  core_modules.md  core_modules_operations.md  core_reproducibility.md  core_utils.md  examples.md  index.md
examples/: frame_extraction_demo.py  requirements.txt  robust_loader_demo.py  test_docvqa_simple.py  test_hiertext_simple.py  timestamp_conversion_demo.py  use_activitynet_captions_loader.py  use_assembly101_loader.py  use_didemo_loader.py  use_docvqa_loader.py
experience_buffer/: checkpoint.pkl
experiments/: README.md
reference/: INTROv1.0.md  ROADMAP.md
requirements/: base.txt  prod-linux.txt  requirements.monitor.txt  verify_installation.py
scripts/: 1_generate_specialized_datasets.py  CASE_STUDIES_README.md  DATA_SYNTHESIS_README.md  README.md  analyze_human_eval_results.py  analyze_lora_ranks.py  analyze_results.py  analyze_sample_efficiency.py  analyze_trajectories.py  analyze_wandb_metrics.py  apply_optimizations.py  augment_data_for_stress_test.py  create_custom_benchmark.py  debug_failed_tests.py  demo_reproducibility.sh  download_base_model.py  error_mode_analysis.py  evaluate.py  evaluate_with_metrics.py  export_inference_engine.py  filter_and_score_data.py  generate_api_docs.py  generate_case_studies.py  generate_cota_data.py  human_review_app.py  hyperparameter_sensitivity.py  inference_server.py  launch_demo.py  launch_human_eval_app.py  launch_monitor.py  launch_public_demo.py  launch_rft_training.sh  launch_sft_training.sh  list_all_tests.py  micro_benchmark.py  package_release.py  preliminary_finetune.py  prepare_human_eval_data.py  preprocess_data.py  profile_bottlenecks.py  (+21 more)
tasks/: Phase0Round1.md  Phase0Round2.md  Phase0Round3.md  Phase0Round4.md  Phase0Round5.md  Phase0Round6.md  Phase1Round1.md  Phase1Round2.md  Phase1Round3.md  Phase1Round4.md  Phase2Round1.md  Phase2Round2.md  Phase2Round3.md  Phase2Round4.md  Phase2Round5.md  Phase2Round6.md  Phase3Round0.md  Phase3Round1.md  Phase3Round2.md  Phase3Round3.md  Phase3Round4.md  Phase3Round5.md
tests/: __init__.py  conftest.py  test_basic.py  test_experimental_protocol.py  test_improvements.py  test_integration.py  test_rft_training.py  test_sft_curriculum.py
tests/data_generation/: __init__.py  test_augmenter.py  test_generators.py
tests/dataloaders/: __init__.py  test_activitynet_captions_loader.py  test_assembly101_loader.py  test_base_loader.py  (+24 more)
(+59 files in other folders)
